Added Changes since.. about examples

--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -1160,6 +1160,16 @@ prov:wasDerivedFrom
          <li>Renamed prov:Source to <a href="#PrimarySource" class="qname">prov:PrimarySource</a>
              and prov:qualifiedSource to <a href="#qualifiedPrimarySource" class="qname">prov:qualifiedPrimarySource</a>.
          </li>
+         <li>Examples have been rewritten to void usage of TriG named
+         graph syntax except for when showing bundles in 
+         <a href="#asInBundle" class="qname">prov:asInBundle</a>
+         and
+         <a href="#mentionOf" class="qname">prov:mentionOf</a>.
+         </li>
+         <li>Some examples have been elaborated to use resource names
+         like <code>:illustration_usage</code> rather than
+         <code>:usage_1</code>.
+         </li>
       </ul>
     </section>
 
