--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -678,6 +678,12 @@
           "<a href=\"http://www.w3.org/TR/2012/REC-xmlschema11-2-20120405/\"><cite>W3C XML Schema Definition Language (XSD) 1.1 Part 2: Datatypes.</cite></a>. "+
           "5 April 2012. W3C Recommendation "+
           "URL: <a href=\"http://www.w3.org/TR/2012/REC-xmlschema11-2-20120405/\">http://www.w3.org/TR/2012/REC-xmlschema11-2-20120405/</a>",
+
+         "TRIG":
+          "Henry S. Thompson; et al. "+
+          "<a href=\"http://www4.wiwiss.fu-berlin.de/bizer/trig/\"><cite>The TriG Syntax</cite></a>. "+
+          "modified 30 July 2007, accessed November 05 2012  "+
+          "URL: <a href=\"http://www4.wiwiss.fu-berlin.de/bizer/trig/\">http://www4.wiwiss.fu-berlin.de/bizer/trig/</a>",
       };
 
       var respecConfig = {
@@ -919,6 +925,11 @@ It can also be specialized to create new classes and properties to model provena
          Conversely, the <strong>qualifies</strong> headers in the listings for qualification terms indicate the unqualified property that they qualify.
          In the OWL file iteself, the annotation properties <span class="qname repeated">prov:qualifiedForm</span> and <span class="qname repeated">prov:unqualifiedForm</span>
          provide the same linkages between the unqualified properties and their qualifiying terms.
+      </p>
+
+      <p>Most examples shown in this cross reference are encoded using the Turtle RDF serialization. 
+         When an example requires a <span class="qname repeated">prov:Bundle</span>, it may use the [[TRIG]] syntax. 
+         Although this document does not specify how to encode Bundles in RDF, TriG's named graph construct is used only to illustrate the concept.
       </p>
 
       <section id="cross-reference-starting-point-terms">
