wrong authors trig

--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -680,7 +680,7 @@
           "URL: <a href=\"http://www.w3.org/TR/2012/REC-xmlschema11-2-20120405/\">http://www.w3.org/TR/2012/REC-xmlschema11-2-20120405/</a>",
 
          "TRIG":
-          "Henry S. Thompson; et al. "+
+          "Chris Bizer and Richard Cyganiak "+
           "<a href=\"http://www4.wiwiss.fu-berlin.de/bizer/trig/\"><cite>The TriG Syntax</cite></a>. "+
           "modified 30 July 2007, accessed November 05 2012  "+
           "URL: <a href=\"http://www4.wiwiss.fu-berlin.de/bizer/trig/\">http://www4.wiwiss.fu-berlin.de/bizer/trig/</a>",
